{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Player",
            "id": "7e9b97c9-61f3-4af6-977f-4b176f220cd4",
            "actions": [
                {
                    "name": "Movimiento",
                    "type": "Value",
                    "id": "0ea7b376-a2c9-42b0-872b-82f36f909761",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DispararIn",
                    "type": "Button",
                    "id": "6fa6de10-6deb-4d1f-a034-e87ef05bf73b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DispararOut",
                    "type": "Button",
                    "id": "07c72f30-3558-4583-944d-2b02b8d3b67d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Trigger",
                    "type": "Button",
                    "id": "94e400f9-33dc-4d06-9ad3-1938c64ee53e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Cambiar Activable",
                    "type": "PassThrough",
                    "id": "fe3cdc6a-aca9-4845-9ebf-f223a2508adf",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Eyectar Arma",
                    "type": "Button",
                    "id": "1ea9f10b-1846-4731-b6a0-34453d470d83",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Eyectar Activable",
                    "type": "Button",
                    "id": "100b0e2b-91ac-4e84-b296-99c3b21c423a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pausa",
                    "type": "Button",
                    "id": "cc84175e-ddfc-4019-8cfc-1f5bfd1ae0a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Directions [KeyboardMouse]",
                    "id": "df09eac6-ba6f-4003-ae4d-45df74e5e758",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movimiento",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1b35e176-f7d1-4600-8f96-7d8da578b838",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Movimiento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "227c6c8a-b5a9-4a8d-878a-e12b90cbaf5d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Movimiento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0cb60200-88ec-4693-a327-fd8de538a6d1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Movimiento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f16d179e-9210-4da1-bdc2-461d0c0ef4c8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Movimiento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Directions [Keyboard]",
                    "id": "8bd4bd15-c306-4422-b4bb-4aaa5c7735af",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Movimiento",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "13496390-f170-4e0f-a663-52dacf38cbec",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movimiento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "45732fc0-a355-4daf-b542-9b18b91d8313",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movimiento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0dbe1fe8-c2ec-4928-968a-8332e4bf53fd",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movimiento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d703685a-d0a4-416c-8c40-3119c94626b4",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movimiento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "94d5c275-e0de-40fa-89c2-fbb5f0c82b06",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movimiento",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ee83980-28c0-40b1-81af-cfbe5f46c4bc",
                    "path": "<XInputController>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movimiento",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cb68c88-207c-4197-8694-4af24f751925",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "DispararIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff2708ac-2d30-4a28-b375-dbb71bf0fd56",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "DispararIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d877282c-7620-45c8-b93c-fe194b2b520e",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DispararIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c20f7d09-a051-43f1-860a-97f578e6e8e4",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DispararIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d647e951-23cc-4d04-b902-142e8ad94d15",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "DispararOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e99f9371-8100-4f83-8ca0-915668c8ee2c",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DispararOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fcc8795d-a222-43e6-b2ce-f5be01b17c67",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DispararOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9541c202-0e15-4eec-b500-a8904ba4b40b",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Cambiar Activable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42a64db7-32a4-4e48-8fe5-3a674326b454",
                    "path": "<XInputController>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Cambiar Activable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Scroll/Bumpers [Xbox Controller]",
                    "id": "88ad1926-6af8-46ef-8b35-2ef65fba7e6c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cambiar Activable",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bb8f3e53-1d94-4d24-a84e-5609838d1cee",
                    "path": "<XInputController>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Cambiar Activable",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7424f8b9-f2fc-4036-bf08-2b0ddfd26e79",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Cambiar Activable",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Scroll/1&2 [Keyboard]",
                    "id": "e833ae41-d4fd-4f9c-864b-b6b989b676a9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cambiar Activable",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ffe5f33f-fe27-4d0b-b76d-afa0b28c7cbf",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Cambiar Activable",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ac20cf99-0f6d-48e5-b5e2-36672560e1e4",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Cambiar Activable",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8d542bc2-82fb-46d1-b086-35b4bd054fc7",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Eyectar Arma",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32f056f5-a1ea-40fc-8fcc-7bbb749ad338",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Eyectar Arma",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "504991c8-9913-4207-95b4-329f361d5b38",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Eyectar Arma",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "200bf0cc-91ee-459f-8ba1-60aaedc3d263",
                    "path": "<XInputController>/leftStickPress",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Eyectar Arma",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af054063-0ae4-490e-91b8-2f4a704d0755",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Eyectar Activable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b113dcdf-1f15-4cd6-b09c-0ee47c649361",
                    "path": "<Keyboard>/r",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Eyectar Activable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6561507-95bc-4de6-b26d-b4beac0b145e",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Eyectar Activable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a26de89-e808-4ce9-94c1-fc9cfae687d4",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Eyectar Activable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f5b50e08-3160-4f23-8542-255c2717445a",
                    "path": "<XInputController>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Eyectar Activable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0aaf6820-5eba-4ee3-9870-1d41d717d341",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71ea921e-b0db-4e8d-83cc-1016d3c5fa0d",
                    "path": "<Keyboard>/w",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97ab7e2a-9611-44e2-84b7-4b5bb06bcce2",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6e68973-3436-47ea-afe3-4356cf3cb037",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b1bf585-4e07-4397-83ba-4f852e84022d",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Pausa",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5625ef1e-6e64-44ad-ae69-bacb2f8c74bc",
                    "path": "<Keyboard>/p",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Pausa",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6dab3fb-5cbc-4324-b8ff-34495bbdca26",
                    "path": "<Keyboard>/f10",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Pausa",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6d5d402-0a24-44a0-ad2a-8f7bd811ed55",
                    "path": "<XInputController>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pausa",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "219664be-29ce-4254-b245-f831a2e120e6",
                    "path": "<Keyboard>/q",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "DispararOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}